Mon Dec 10 19:46:25 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update to apply the changes in the
	  clustering branch.

Mon Dec 10 19:45:30 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add ability to restrict the reordering
	  to just use specific fields, and to use approximations for the
	  termfreqs to speed it up.

Mon Dec 10 17:19:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Remove accidentally committed
	  debugging prints.

Mon Dec 10 17:18:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add (experimental)
	  _reorder_by_similarity() method to SearchResults.

Thu Dec 06 16:53:23 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add a "userdata" parameter to the
	  closehandler callback, to make writing the callbacks easier.
	* xappy/searchconnection_doctest2.txt: Test the userdata parameter.

Thu Dec 06 12:27:53 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight_doctest1.txt: Don't display the output of the
	  highlighter - we're just testing that it returns promptly.

Thu Dec 06 12:19:55 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/highlight.py,xappy/highlight_doctest1.txt: Simplified
	  regexp to work around freezing problem. Less procise now but
	  probably good enough temporarily. Fixed test case.

Thu Dec 06 07:38:49 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight_doctest1.txt: Add testcase of a pathological
	  document for highlighting - the regular expression currently
	  takes a ridiculously long time to process this.

Thu Dec 06 07:29:28 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Fix for running with debug logging.

Wed Dec 05 15:57:41 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
