@@ -1,3 +1,8 @@
+Mon Dec 17 09:28:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add _cluster method, and
+	  _reorder_by_clusters() method.
+
 Mon Dec 10 19:46:25 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Update to apply the changes in the
